# StillAlive

./: .gitignore  ASCII_images.h  CMakeLists.txt  Player.cpp  Player.h  README.md  install.sh  main.cpp  notes_defenitions.h  song.h
